k8s/ingress-seminarhub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seminarhub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: seminarhub-cloud-gateway-server-dev
                port:
                  number: 80
